Dashboard and Ticket Page Update
