# CegCRMAPI/CegCRMClient/src/api/ticket.ts
@@ -1,5 +1,5 @@
 import API from "./axios";
-import { Ticket, CreateTicket } from "@/types/ticket";
+import { Ticket, CreateTicket, TicketStatus } from "@/types/ticket";
 
 export const getAllTickets = () => API.get("/Tickets");
 export const getTicketById = (id: string) => API.get(`/Tickets/${id}`);
@@ -7,4 +7,7 @@ export const createTicket = (data: CreateTicket) => API.post("/Tickets", data);
 export const updateTicket = (id: string, data: Omit<Ticket, "id">) => API.put(`/Tickets/${id}`, data);
 export const deleteTicket = (id: string) => API.delete(`/Tickets/${id}`);
 export const assignTicket = (ticketId: string, employeeId: string) => 
-  API.put(`/Tickets/${ticketId}/assign`, { ticketId, employeeId }); 
+  API.put(`/Tickets/${ticketId}/assign`, { ticketId, employeeId });
+
+export const updateTicketStatus = (ticketId: string, newStatus: TicketStatus) =>
+  API.patch(`/Tickets/${ticketId}/status`, { ticketId, newStatus }); 
